--- a/math-rules.qmd
+++ b/math-rules.qmd
@@ -19,7 +19,9 @@ Then $\nabla_\mathbf{x}f$, the **gradient** of $f$ with respect to $\mathbf{x}$ 
 
 $$
 \nabla_\mathbf{x}f = \begin{bmatrix}\frac{\partial f}{\partial x_1} \\ \frac{\partial f}{\partial x_2} \\ \vdots \\ \frac{\partial f}{\partial x_k}\end{bmatrix}
-$$<hr>
+$$
+
+<hr>
 
 ### Gradient of $\mathbf{x}^T\mathbf{z}$
 
@@ -29,7 +31,9 @@ The gradient of $\mathbf{x}^T\mathbf{z}$ with respect to $\mathbf{x}$ is
 
 $$
 \nabla_\mathbf{x} \hspace{1mm} \mathbf{x}^T\mathbf{z} = \mathbf{z}
-$$<hr>
+$$
+
+<hr>
 
 ### Gradient of $\mathbf{x}^T\mathbf{A}\mathbf{x}$
 
@@ -90,7 +94,7 @@ $$
 
 <hr>
 
-### Expected value of $a g_1(X) + bg_2(X) + c)$
+### Expected value of $a g_1(X) + bg_2(X) + c$
 
 Let $X$ be a random variable and $a$, $b$, and $c$ be constants. For any functions $g_1(x)$ and $g_2(x)$, then
 
@@ -106,7 +110,7 @@ Then $E(\mathbf{b}) = E\begin{bmatrix}b_1 \\ \vdots \\ b_p\end{bmatrix} = \begin
 
 <hr>
 
-### Expected value of $\mathbf{Ab}$ 
+### Expected value of $\mathbf{Ab}$
 
 Let $\mathbf{A}$ be a $n \times p$ matrix of constants and $\mathbf{b}$ a $p \times 1$ vector of random variables. Then
 
@@ -116,7 +120,7 @@ $$
 
 ## Variance
 
-### Variance of random variable $X$ 
+### Variance of random variable $X$
 
 The **variance** of a random variable $X$ is a measure of the spread of a distribution about its mean.
 
@@ -126,7 +130,7 @@ $$
 
 <hr>
 
-### Variance of $aX + b$ 
+### Variance of $aX + b$
 
 Let $X$ be a random variable and $a$ and $b$ be constants. Then
 
@@ -136,28 +140,26 @@ $$
 
 <hr>
 
-### Variance of vector $\mathbf{b}$ 
+### Variance of vector $\mathbf{b}$
 
 Let $\mathbf{b} = \begin{bmatrix}b_1 \\ \vdots \\b_p\end{bmatrix}$ be a $p \times 1$ vector of random variables.
 
-Then $Var(\mathbf{b}) = \begin{bmatrix}Var(b_1) & Cov(b_1, b_2) & \dots & Cov(b_1, b_p) \\ Cov(b_2, b_1) & Var(b_2) & \dots & Cov(b_2, b_p) \\ \vdots & \vdots & \dots & \vdots \\ Cov(b_p, b_1) & Cov(b_2, b_p) & \dots & Var(b_p)\end{bmatrix}$
+Then
 
-<hr>
+$$
+Var(\mathbf{b}) = E[(\mathbf{b} - E(\mathbf{b}))(\mathbf{b} - E(\mathbf{b}))^T]
+$$
 
-### Variance of vector $\mathbf{b}$ (independent random variables)
+<!--# Can add in the drop-down the resulting matrix-->
 
-Let $\mathbf{b} = \begin{bmatrix}b_1 \\ \vdots \\b_p\end{bmatrix}$ be a $p \times 1$ vector of [*independent*]{.underline} random variables.
-
-Then $Var(\mathbf{b}) = \begin{bmatrix}Var(b_1) & 0 & \dots & 0 \\ 0 & Var(b_2) & \dots & 0 \\ \vdots & \vdots & \dots & \vdots \\ 0 & 0 & \dots & Var(b_p)\end{bmatrix}$
-
-<hr>
-
-### Variance of $\mathbf{Ab}$ 
+### Variance of $\mathbf{Ab}$
 
 Let $\mathbf{A}$ be a $n \times p$ matrix of constants and $\mathbf{b}$ a $p \times 1$ vector of random variables. Then
 
 $$
-Var(\mathbf{Ab}) = \mathbf{A}Var(\mathbf{b})\mathbf{A}^T
+\begin{aligned}
+Var(\mathbf{Ab}) &= E[(\mathbf{Ab} - E(\mathbf{Ab}))(\mathbf{Ab} - E(\mathbf{Ab}))^T]\\& = \mathbf{A}Var(\mathbf{b})\mathbf{A}^T
+\end{aligned}
 $$
 
 ## 
