--- a/slides/references.bib
+++ b/slides/references.bib
@@ -23,3 +23,10 @@
 	doi = {10.1201/9781003229407},
 	url = {http://dx.doi.org/10.1201/9781003229407}
 }
+
+@book{casella2024statistical,
+  title={Statistical inference},
+  author={Casella, George and Berger, Roger},
+  year={2024},
+  publisher={CRC Press}
+}
