--- a/slides/13-mle.qmd
+++ b/slides/13-mle.qmd
@@ -75,11 +75,15 @@ $$using least-squares estimation
 
 Suppose a basketball player shoots a single free throw, such that the probability of making a basket is $p$
 
+. . .
+
+::: incremental
 -   What is the probability distribution for this random phenomenon?
 
 -   Suppose the probability is $p = 0.5$? What is the probability the player makes a single shot, given this value of the parameter $p$?
 
 -   Suppose the probability is $p = 0.8$? What is the probability the player makes a single shot, given this value of the parameter $p$?
+:::
 
 ## Shooting three free throws
 
@@ -87,9 +91,13 @@ Suppose the player shoots three free throws. They are all independent and the pl
 
 Let $B$ represent a made basket, and $M$ represent a missed basket. The player shoots three free throws with the outcome $BBM$.
 
+. . .
+
+::: incremental
 -   Suppose the probability is $p = 0.5$? What is the probability of observing the data $BBM$, given this value of the parameter $p$?
 
 -   Suppose the probability is $p = 0.3$? What is the probability of observing the data $BBM$, given this value of the parameter $p$ ?
+:::
 
 ## Shooting three free throws
 
@@ -97,32 +105,36 @@ Suppose the player shoots three free throws. They are all independent and the pl
 
 The player shoots three free throws with the outcome $BBM$.
 
+. . .
+
+::: incremental
 -   How would you describe in words the probabilities we previously calculated?
 
 -   **New question:** What parameter value of $p$ do you think maximizes the
     probability of observing this data?
 
 -   We will use a **likelihood** function to answer this question.
+:::
 
-## Likelihood
+## Likelihood {.incremental}
 
-A **likelihood** is a function that tells us how likely we are to observe our data for a given parameter value (or values). <!--# Find a better definition - Casella Berger maybe?-->
+-   A **likelihood** is a function that tells us how likely we are to observe our data for a given parameter value (or values). <!--# Find a better definition - Casella Berger maybe?-->
 
-. . .
+-   Note that this is **not** the same as the probability function. In other words,
 
-Note that this is **not** the same as the probability function. In other words,
+-   **Probability function**: Fixed parameter value(s) + input possible outcomes $\Rightarrow$ probability of seeing the different outcomes given the parameter value(s)
 
-. . .
+-   **Likelihood function**: Fixed data + input possible parameter values $\Rightarrow$ probability of seeing the fixed data for each parameter value
 
-**Probability function**: Fixed parameter value(s) + input possible outcomes $\Rightarrow$ probability of seeing the different outcomes given the parameter value(s)
-
-**Likelihood function**: Fixed data + input possible parameter values $\Rightarrow$ probability of seeing the fixed data for each parameter value
-
-## Likelihood: shooting three free throws
+    ## Likelihood: shooting three free throws
 
 The likelihood function for the probability of heads $p$ given we observed $BBM$ when shooting three independent free throws is $$
 L(p|BBM) = p \times p \times (1 - p)
 $$
+
+<br>
+
+. . .
 
 Thus, if the likelihood for $p = 0.8$ is
 
@@ -146,6 +158,9 @@ $$
 L(p|BBM) = p \times p \times (1 - p) = p^2 \times (1 - p)
 $$
 
+. . .
+
+::: incremental
 -   We want of the value of $p$ that maximizes this likelihood function, i.e., the value of $p$ that is most likely given the observed data.
 
 -   The process of finding this value is **maximum likelihood estimation**.
@@ -157,8 +172,7 @@ $$
     -   Using calculus
 
     -   Numerical approximation
-
-<!--# Add a poll - what is your guess for the MLE?-->
+:::
 
 ## Finding the MLE using graphs
 
@@ -210,11 +224,18 @@ Suppose the player shoots $n$ free throw. They are all independent and the playe
 
 Suppose the player makes $k$ baskets out of the $n$ free throws. This is the observe data.
 
+. . .
+
+::: incremental
 -   What is the formula for the probability distribution to describe this random phenomenon?
 
+```{=html}
+<!-- -->
+```
 -   What is the formula for the likelihood function for $p$ given the observed data?
 
 -   For what value of $p$ do we maximize the likelihood given the observed data? Use calculus to find the response.
+:::
 
 ## Why maximum likelihood estimation?  {.midi}
 
@@ -234,16 +255,158 @@ Suppose the player makes $k$ baskets out of the $n$ free throws. This is the obs
 If the normality assumption holds, the least squares estimator is the maximum likelihood estimator for $\beta$. Therefore, it has all these properties of the MLE.
 :::
 
-# MLE in linear regression
+# MLE in linear regression {.midi}
 
-<!--# intro slide of this is our model we've seen the whole time-->
+Recall the linear model
 
-<!--# slide looking at the likelihood and log-likelihood for simple linear regression model-->
+$$
+\mathbf{y} = \mathbf{X}\boldsymbol{\beta} + \boldsymbol{\epsilon}, \hspace{10mm} \boldsymbol{\epsilon} \sim N(\mathbf{0}, \sigma^2_{\epsilon}\mathbf{I}) 
+$$
 
-<!--# maybe show the work for beta 0-->
+. . .
 
-<!--# show the result for beta1 and sigma. You will explore this more in lab after fall break-->
+::: incremental
+-   We have discussed least-squares estimation to find $\hat{\boldsymbol{\beta}}$ and $\hat{\sigma}_\epsilon^2$
+-   We have discussed properties of $\hat{\boldsymbol{\beta}}$ that depend on $E(\boldsymbol{\epsilon}) = \mathbf{0}$ and $Var(\boldsymbol{\epsilon}) = \sigma^2_{\epsilon}\mathbf{I}$
+-   We have used the fact that $\hat{\boldsymbol{\beta}} \sim N(\boldsymbol{\beta}, \sigma^2_{\epsilon}(\mathbf{X}^T\mathbf{X})^{-1})$ when doing hypothesis testing and confidence intervals.
+-   Now we will discuss how we know $\hat{\boldsymbol{\beta}}$ is normally distributed, as we introduce MLE for linear regression
+:::
 
-## Recap
+## Simple linear regression model 
+
+Suppose we have the simple linear regression (SLR) model
+
+$$
+y_i = \beta_0 + \beta_1x_i + \epsilon_i, \hspace{10mm} \epsilon_i \sim N(0, \sigma^2_{\epsilon})
+$$
+
+such that $\epsilon_i$ are independently and identically distributed.
+
+<br>
+
+. . .
+
+We can write this model in the form below and use this
+
+$$
+y_i | x_i \sim N(\beta_0 + \beta x_i, \sigma^2_{\epsilon})
+$$
+
+## Side note: Normal distribution 
+
+Let $X$ be a random variable, such that $X \sim N(\mu, \sigma^2)$. Then the probability function is
+
+$$
+P(X = x | \mu, \sigma^2) = \frac{1}{\sqrt{2\pi\sigma^2}}\exp\Big\{-{\frac{1}{2\sigma^2}(x - \mu)^2}\Big\}
+$$
+
+## Likelihood for SLR
+
+The likelihood function for $\beta_0, \beta_1, \sigma^2_{\epsilon}$ is
+
+$$
+\begin{aligned}
+L&(\beta_0, \beta_1, \sigma^2_{\epsilon} | x_i, \dots, x_n, y_i, \dots, y_n) \\[5pt]
+ &= \prod_{i=1}^n \frac{1}{\sqrt{2\pi\sigma_
+\epsilon^2}}\exp\Big\{{-\frac{1}{2\sigma_\epsilon^2}(y_i - [\beta_0 + \beta_1x_i])^2}\Big\} \\[10pt]
+& = (2\pi\sigma^2_{\epsilon})^{-\frac{n}{2}}\exp\Big\{-\frac{1}{2\sigma^2_{\epsilon}}\sum_{i=1}^n(y_i - \beta_0 - \beta_1x_i)^2\Big\}
+\end{aligned}
+$$
+
+## Log-likelihood for SLR
+
+The log-likelihood function for $\beta_0, \beta_1, \sigma^2_{\epsilon}$ is
+
+$$
+\begin{aligned}
+\log &L(\beta_0, \beta_1, \sigma^2_{\epsilon} | x_i, \dots, x_n, y_i, \dots, y_n) 
+  \\[8pt]
+& = -\frac{n}{2}\log(2\pi\sigma^2_{\epsilon}) -\frac{1}{2\sigma^2_{\epsilon}}\sum_{i=1}^n(y_i - \beta_0 - \beta_1x_i)^2
+\end{aligned}
+$$
+
+<br>
+
+. . .
+
+We will use the log-likelihood function to find the MLEs
+
+## MLE for $\beta_0$ 
+
+1️⃣ Take derivative of $\log L$ with respect to $\beta_0$ and set it equal to 0
+
+$$
+\frac{\partial \log L}{\partial \beta_0} = -\frac{1}{2\sigma^2_\epsilon}\sum_{i=1}^n (y_i - \beta_0 - \beta_1x_i)(-1) = 0
+$$
+
+## MLE for $\beta_0$  {.midi}
+
+2️⃣ Find the $\tilde{\beta}_0$ that satisfies the equality on the previous slide
+
+. . .
+
+After a few steps...
+
+$$
+\begin{aligned}
+&\Rightarrow \sum_{i=1}^ny_i - n\tilde{\beta}_0 - \tilde{\beta}_1\sum_{i=1}^n x_i = 0 \\
+&\Rightarrow \sum_{i=1}^ny_i  - \tilde{\beta}_1\sum_{i=1}^n x_i = n\tilde{\beta}_0 \\
+&\Rightarrow \frac{1}{n}\sum_{i=1}^ny_i  - \frac{1}{n}\tilde{\beta}_1\sum_{i=1}^n x_i = \tilde{\beta}_0
+\end{aligned}
+$$
+
+## 
+
+## MLE for $\beta_0$  {.midi}
+
+3️⃣ We can use the second derivative to show we've found the maximum
+
+$$
+\frac{\partial^2 \log L}{\partial \beta_0^2} = -\frac{n}{2\tilde{\sigma}^2_\epsilon}  < 0
+$$
+
+<br>
+
+. . .
+
+Therefore, we have found the maximum. Thus, MLE for $\beta_0$ is
+
+$$
+\tilde{\beta}_0 = \bar{y} - \tilde{\beta}_1\bar{x}
+$$
+
+$$$$
+
+## MLE for $\beta_1$ and $\sigma^2_{\epsilon}$ 
+
+We can use a similar process to find the MLEs for $\beta_1$ and $\sigma^2_{\epsilon}$
+
+$$
+\tilde{\beta}_1 = \frac{\sum_{i=1}^n y_i(x_i - \bar{x})}{\sum_{i=1}^n(x_i - \bar{x})^2}
+$$
+
+. . .
+
+$$
+\tilde{\sigma}^2_{\epsilon} = \frac{\sum_{i=1}^n(y_i - \tilde{\beta}_0 - \tilde{\beta}_1x_i)^2}{n} = \frac{\sum_{i=1}^ne_i^2}{n}
+$$
+
+## Putting it all together {.incremental}
+
+-   The MLEs $\tilde{\beta}_0$ and $\tilde{\beta}_1$ are equivalent to the least-squares estimators, when the errors follow independent and identical normal distributions
+
+-   This means the least-squares estimators $\hat{\beta}_0$ and $\hat{\beta}_1$ and inherit all the nice properties of MLEs
+
+    -   Consistency
+    -   Efficiency - minimum variance among all consistent estimators
+    -   Asymptotically normal
+
+## Putting it all together {.incremental}
+
+-   From previous work, we also know these estimators are unbiased
+
+-   Note that the MLE $\tilde{\sigma}^2_{\epsilon}$ is *asymptotically unbiased*
+
+    -   The estimate from least-squares $\hat{\sigma}_{\epsilon}^2$ is unbiased
 
 ## References
