--- a/slides/13-mle.qmd
+++ b/slides/13-mle.qmd
@@ -55,19 +55,21 @@ bibliography: references.bib
 
 ## Motivation  {.midi}
 
+::: incremental
 -   We can find the estimators of $\boldsymbol{\beta}$ and $\sigma^2_{\epsilon}$ for the model
 
 $$
 \mathbf{y} = \mathbf{X}\boldsymbol{\beta} + \boldsymbol{\epsilon}, \hspace{10mm} \boldsymbol{\epsilon} \sim N(0, \sigma^2_\epsilon\mathbf{I})
 $$using least-squares estimation
 
--   We have also shown some nice properties of the least-squares estimator $\hat{\boldsymbol{\beta}}$ , given $E(\boldsymbol{\epsilon}) = \mathbf{0}$ and $Var(\boldsymbol{\epsilon}) = \sigma^2_{\epsilon}\mathbf{I}$
+-   We have also shown some nice properties of the least-squares estimator $\hat{\boldsymbol{\beta}}$, given $E(\boldsymbol{\epsilon}) = \mathbf{0}$ and $Var(\boldsymbol{\epsilon}) = \sigma^2_{\epsilon}\mathbf{I}$
 
 -   Today we will introduce another way to find these estimators - **maximum likelihood estimation.** We will see...
 
     -   the maximum likelihood estimators have nice properties
 
     -   the least-squares estimator is equal to the maximum likelihood estimator when certain assumptions hold
+:::
 
 # Maximum likelihood estimation
 
@@ -80,9 +82,9 @@ Suppose a basketball player shoots a single free throw, such that the probabilit
 ::: incremental
 -   What is the probability distribution for this random phenomenon?
 
--   Suppose the probability is $p = 0.5$? What is the probability the player makes a single shot, given this value of the parameter $p$?
+-   Suppose the probability is $p = 0.5$? What is the probability the player makes a single shot, given this value of $p$?
 
--   Suppose the probability is $p = 0.8$? What is the probability the player makes a single shot, given this value of the parameter $p$?
+-   Suppose the probability is $p = 0.8$? What is the probability the player makes a single shot, given this value of $p$?
 :::
 
 ## Shooting three free throws
@@ -94,9 +96,9 @@ Let $B$ represent a made basket, and $M$ represent a missed basket. The player s
 . . .
 
 ::: incremental
--   Suppose the probability is $p = 0.5$? What is the probability of observing the data $BBM$, given this value of the parameter $p$?
+-   Suppose the probability is $p = 0.5$? What is the probability of observing the data $BBM$, given this value of $p$?
 
--   Suppose the probability is $p = 0.3$? What is the probability of observing the data $BBM$, given this value of the parameter $p$ ?
+-   Suppose the probability is $p = 0.3$? What is the probability of observing the data $BBM$, given this value of $p$ ?
 :::
 
 ## Shooting three free throws
@@ -116,19 +118,21 @@ The player shoots three free throws with the outcome $BBM$.
 -   We will use a **likelihood** function to answer this question.
 :::
 
-## Likelihood {.incremental}
+## Likelihood
 
+::: incremental
 -   A **likelihood** is a function that tells us how likely we are to observe our data for a given parameter value (or values). <!--# Find a better definition - Casella Berger maybe?-->
 
--   Note that this is **not** the same as the probability function. In other words,
+-   Note that this is **not** the same as the probability function.
 
 -   **Probability function**: Fixed parameter value(s) + input possible outcomes $\Rightarrow$ probability of seeing the different outcomes given the parameter value(s)
 
 -   **Likelihood function**: Fixed data + input possible parameter values $\Rightarrow$ probability of seeing the fixed data for each parameter value
+:::
 
-    ## Likelihood: shooting three free throws
+## Likelihood: shooting three free throws
 
-The likelihood function for the probability of heads $p$ given we observed $BBM$ when shooting three independent free throws is $$
+The likelihood function for the probability of a basket $p$ given we observed $BBM$ when shooting three independent free throws is $$
 L(p|BBM) = p \times p \times (1 - p)
 $$
 
@@ -220,7 +224,7 @@ Use calculus to find the MLE of $p$ given the data $BBM$.
 
 ## Shooting $n$ free throws
 
-Suppose the player shoots $n$ free throw. They are all independent and the player has the same probability $p$ of making each shot.
+Suppose the player shoots $n$ free throws. They are all independent and the player has the same probability $p$ of making each shot.
 
 Suppose the player makes $k$ baskets out of the $n$ free throws. This is the observe data.
 
@@ -257,6 +261,8 @@ If the normality assumption holds, the least squares estimator is the maximum li
 
 # MLE in linear regression {.midi}
 
+## Linear regression
+
 Recall the linear model
 
 $$
@@ -286,7 +292,7 @@ such that $\epsilon_i$ are independently and identically distributed.
 
 . . .
 
-We can write this model in the form below and use this
+We can write this model in the form below and use this to find the MLE
 
 $$
 y_i | x_i \sim N(\beta_0 + \beta x_i, \sigma^2_{\epsilon})
@@ -355,8 +361,6 @@ $$
 \end{aligned}
 $$
 
-## 
-
 ## MLE for $\beta_0$  {.midi}
 
 3️⃣ We can use the second derivative to show we've found the maximum
@@ -391,8 +395,9 @@ $$
 \tilde{\sigma}^2_{\epsilon} = \frac{\sum_{i=1}^n(y_i - \tilde{\beta}_0 - \tilde{\beta}_1x_i)^2}{n} = \frac{\sum_{i=1}^ne_i^2}{n}
 $$
 
-## Putting it all together {.incremental}
+## Putting it all together
 
+::: incremental
 -   The MLEs $\tilde{\beta}_0$ and $\tilde{\beta}_1$ are equivalent to the least-squares estimators, when the errors follow independent and identical normal distributions
 
 -   This means the least-squares estimators $\hat{\beta}_0$ and $\hat{\beta}_1$ and inherit all the nice properties of MLEs
@@ -400,10 +405,11 @@ $$
     -   Consistency
     -   Efficiency - minimum variance among all consistent estimators
     -   Asymptotically normal
+:::
 
 ## Putting it all together {.incremental}
 
--   From previous work, we also know these estimators are unbiased
+-   From previous work, we also know estimators $\tilde{\beta}_0$ and $\tilde{\beta}_1$ are unbiased
 
 -   Note that the MLE $\tilde{\sigma}^2_{\epsilon}$ is *asymptotically unbiased*
 
