--- a/slides/13-mle.qmd
+++ b/slides/13-mle.qmd
@@ -226,7 +226,7 @@ Use calculus to find the MLE of $p$ given the data $BBM$.
 
 Suppose the player shoots $n$ free throws. They are all independent and the player has the same probability $p$ of making each shot.
 
-Suppose the player makes $k$ baskets out of the $n$ free throws. This is the observe data.
+Suppose the player makes $k$ baskets out of the $n$ free throws. This is the observed data.
 
 . . .
 
@@ -295,7 +295,7 @@ such that $\epsilon_i$ are independently and identically distributed.
 We can write this model in the form below and use this to find the MLE
 
 $$
-y_i | x_i \sim N(\beta_0 + \beta x_i, \sigma^2_{\epsilon})
+y_i | x_i \sim N(\beta_0 + \beta_1 x_i, \sigma^2_{\epsilon})
 $$
 
 ## Side note: Normal distribution 
