--- a/math-rules.qmd
+++ b/math-rules.qmd
@@ -162,4 +162,12 @@ Var(\mathbf{Ab}) &= E[(\mathbf{Ab} - E(\mathbf{Ab}))(\mathbf{Ab} - E(\mathbf{Ab}
 \end{aligned}
 $$
 
-## 
+## Probability distributions 
+
+### Normal distribution
+
+Let $X$ be a random variable, such that $X \sim N(\mu, \sigma^2)$. Then the probability function is
+
+$$
+P(X = x | \mu, \sigma^2) = \frac{1}{\sqrt{2\pi\sigma^2}}\exp\Big\{-{\frac{1}{2\sigma^2}(x - \mu)^2}\Big\}
+$$
