--- a/slides/14-model-diagnostics.qmd
+++ b/slides/14-model-diagnostics.qmd
@@ -31,7 +31,7 @@ bibliography: references.bib
 
 ## Announcements
 
--   Exam corrections (optional) due Thursday, October 24 at 11:59pm
+-   Exam corrections (optional) due Thursday, October 24 at 11:59pm [on Canvas](https://canvas.duke.edu/courses/38867/assignments/169519)
 
 -   Labs resume on Monday
 
@@ -39,7 +39,7 @@ bibliography: references.bib
 
 -   Statistics experience due Tuesday, November 26
 
-## Computing set up 
+## Computing set up
 
 ```{r}
 #| echo: true
@@ -282,7 +282,7 @@ ggplot(data = lemurs_aug, aes(x = .fitted, y = .resid)) +
 
 -   Constant variance
 
-## Model conditions 
+## Model conditions
 
 ```{r}
 #| echo: false
@@ -355,7 +355,7 @@ p1 + p2
     -   **leverage**, **standardized residuals**, and **Cook's distance**
 :::
 
-# Leverage 
+# Leverage
 
 ## Hat matrix
 
@@ -365,7 +365,7 @@ p1 + p2
 
 -   An element of $\mathbf{H}$, $h_{ij}$, is the leverage of the observation $y_i$ on the fitted values $\hat{y}_{ij}$
 
-## Leverage 
+## Leverage
 
 -   We focus on the diagonal elements
 
@@ -499,7 +499,7 @@ ggplot(data = lemurs_aug, aes(x = .fitted, y = .std.resid)) +
 
 -   An observation is a *potential outlier* if its standardized residual is beyond $\pm 3$
 
-## Digging in to the data 
+## Digging in to the data
 
 Let's look at the value of the response variable to better understand potential outliers
 
@@ -552,7 +552,7 @@ This measure is a combination of
 
 -   General thresholds .An observation with
 
-    -    $D_i > 0.5$ is **moderately influential**
+    -   $D_i > 0.5$ is **moderately influential**
 
     -   $D_i > 1$ is **very influential**
 
